--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 html, body {
     padding: 0;
     margin: 0;
@@ -29,9 +30,36 @@ body {
 #main_div {
     margin: 0 auto;
     max-width: 55em;
-    padding: 30px;
+    
     position: absolute;
 }
+#title_div {
+    padding: 30px;
+    position: absolute;
+    z-index: 100;
+}
+#index-div {
+    margin:80px 200px 0px 200px;
+    max-width:900px;
+    text-align: center;
+    align: center;
+}
+#index-table td {
+    align: center;
+    border: 10px solid #222;
+    height:500px; 
+    width: 280px; 
+    vertical-align: top;
+}
+img.demoplot {
+    max-width: 220px;
+    max-height: 220px;
+}
+img {
+    max-width: 640px;
+    margin-left: 30px;
+}
+
 
 .top {
     margin: 30px;
