--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,11 @@ body {
     z-index: 100;
 }
 #index-div {
-    margin:80px 0px 0px 0px;
+    margin:40px 0px 0px 0px;
     text-align: center;
+    align: center;
+}
+#index-table table {
     align: center;
 }
 #index-table td {
